fixed navbar font-size, no overlaps now

--- a/ui-clone/src/components/Nav.css
+++ b/ui-clone/src/components/Nav.css
@@ -13,6 +13,7 @@
 
 .nav > h2 {
   cursor: pointer;
+  font-size: 22px;
   margin-left: 30px;
   margin-right: 30px;
   font-weight: 500;
